--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>biz.wiklander.tools</groupId>
-  <artifactId>identifier-sentence</artifactId>
-  <version>0.0.1</version>
-  <dependencies>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>biz.wiklander.tools</groupId>
+    <artifactId>identifier-sentence</artifactId>
+    <version>0.1.0</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+    <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.9</version>
+      <version>4.13.2</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>23.0.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
